[project]
name = "gemmaterrain"
version = "1.0.0"
description = "Multimodal GeoAI for the Unconnected — Gemma 4 on ARM edge hardware"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.9.0",
    "networkit>=11.0",
    "streamlit>=1.30.0",
    "streamlit-folium>=0.18.0",
    "folium>=0.15.0",
    "numpy>=1.26.0",
    "osmnx>=1.9.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pillow>=10.0.0",
    "huggingface-hub>=1.15.0",
]

[project.optional-dependencies]
build = [
    "huggingface-hub>=0.20.0",
]
finetune = [
    "unsloth>=2024.1",
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "datasets>=2.16.0",
    "trl>=0.7.0",
]
